5.3.0 -> 5.4a1:
    - jbj: bc: fix: eliminate static buffer overflow.
    - jbj: ssl: ensure RSA/DSA parameters are set.
    - jbj: hkp: expose pubky/signature parameter setters.
    - jbj: hkp: pick up RHEL6 pubkeys for testing.
    - jbj: hkp: permit 32-bit as well as 64-bit fingerprint quieries.
    - jbj: hkp: add a NULL sentinel to pgpGrabPkts packaet array.
    - jbk: hkp: add PGPSIGTYPE_KEY_BINDING handling. never seen one *shrug*.
    - jbj: hkp: expose pgpGrabPkts in loader maps.
    - jbj: hkp: permit fingerprints on public subkeys.
    - jbj: gcrypt: fix: convert hash as signed for RSA, unsigned for DSA.
    - jbj: add a negative pubkey lookup Bloom filter.
    - jbj: fix: save chroot value across embedded scriptlet execution.
	from Przemyslaw Iskra <sparky@pld-linux.org>.
    - jbj: update "version used" details in INSTALL.
    - jbj: permit --with-neon=internal.

5.2b1 -> 5.3.0
    - jbj: perl: repair "make test" by changing the tests.
    - jbj: lua: fix: attempt to create %{pkgbindir} if it doesn't exists.
    - jbj: i18n: update po files (Translation Project).
    - jbj: rpmdb: fix: replace assert failures with RPMRC_FAIL returns.
    - jbj: dbi: rework the error message to supply copious debug details.
    - jbj: dbi: fix: --import as non-root assert failure.
    - jbj: DB_CONFIG: fix: add mutex_set_max 8000. better scaling needed, todo++.
    - jbj: beecrypt: permit --with-beecrypt=internal (w manual checkout/autogen)
    - jbj: resurrect "make dist".
    - jbj: i18n: update po files (Translation Project).
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: tests: fix: invoke check-files from in-tree w "make check".
    - jbj: rpmfps: don't bother w file fingerprints for *.src.rpm installs.
    - jbj: rpmbf: sanity checks on rpmbfParam(n,e) arguments.
    - jbj: rpmvt: add header virtual table (no arrays/blobs yet).
    - jbj: rpmvt: add rpmtags virtual table.
    - jbj: rpmvt: permit column data types.